# upa

./: .dockerignore  .gitignore  .rustfmt.toml  .yarnrc.yml  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  package.json
.github/: pull_request_template.md
.github/workflows/: circuits.yml  confidential-coins.yml  containerize.yml  contracts.yml  demo-app.yml  prover.yml
.yarn/plugins/: plugin-envs.cjs
audits/: README.md
circuits/: Cargo.toml  README.md
circuits/benches/: README.md  keccak.rs  outer.rs  universal_batch_verifier.rs  universal_outer.rs  upa.rs  utils.rs
circuits/benches/configs/: bv_configs.json  keccak_configs.json  outer_configs.json  ubv_configs.json  universal_outer_configs.json
circuits/benches/log_parsing/: concatenate_files.py  upa_log_parser.py
circuits/benches/scripts/: ubv_large_bench.sh  upa_large_bench.sh
circuits/src/: lib.rs
circuits/src/batch_verify/: mod.rs
circuits/src/batch_verify/common/: chip.rs  ecc.rs  mod.rs  native.rs  types.rs
circuits/src/batch_verify/fixed/: chip.rs  mod.rs  native.rs  types.rs  utils.rs
circuits/src/batch_verify/universal/: chip.rs  mod.rs  native.rs  types.rs  utils.rs
circuits/src/keccak/: chip.rs  inputs.rs  mod.rs  multivar.rs  utils.rs  variable.rs
circuits/src/outer/: fixed.rs  mod.rs  universal.rs  utils.rs
circuits/src/tests/: README.md  commitment_point.rs  hashing.rs  mod.rs  outer.rs  universal_outer.rs
circuits/src/tests/batch_verifier/: chip.rs  circuit.rs  component.rs  mod.rs  native.rs
circuits/src/tests/configs/: circuit.config  fp_mul.config  hashing.config  multi_pairing.config  outer_circuit_test.config  pairing_check.config  scalar_powers.config  scale_pairs.config
circuits/src/tests/data/: batch_verifier_bad_inputs_2.json  batch_verifier_inputs_2.json  commitment_proof_batch_8_proofs.json  invalid_proof.upa.json  invalid_vk.upa.json  proof1.json  proof2.json  proof3.json  proof_batch_1_2.json  proof_batch_1_8.json  proof_batch_4_pi.json  universal_batch_verifier_10_proofs.json  universal_batch_verifier_4_proofs.json  universal_batch_verifier_8_proofs.json  universal_batch_verifier_bad_inputs_2.json  universal_batch_verifier_inputs_2.json  vk-2.json  vk-3.json  vk.json  vk_commitment.json
circuits/src/tests/data/gnark/: brevis.inputs.json  brevis.proof.json  brevis.vk.json  convert.sh  no_commitment.inputs.json  no_commitment.proof.json  no_commitment.vk.json  private_commitment.inputs.json  private_commitment.proof.json  private_commitment.vk.json  readme.md
circuits/src/tests/data/gnark/_upa_format/: brevis.upa-proof-inputs.json  brevis.upa-vk.json  no_commitment.upa-proof-inputs.json  no_commitment.upa-vk.json  private_commitment.upa-proof-inputs.json  private_commitment.upa-vk.json
circuits/src/tests/data/gnark/invalid/: private_commitment_wrong_hash.proof.json  private_commitment_wrong_hash.vk.json  public_commitment.inputs.json  public_commitment.proof.json  public_commitment.vk.json
circuits/src/tests/data/gnark/invalid/_upa_format/: private_commitment_wrong_hash.upa-proof-inputs.json  private_commitment_wrong_hash.upa-vk.json  public_commitment.upa-proof-inputs.json  public_commitment.upa-vk.json
circuits/src/tests/keccak/: mod.rs  multivar.rs  utils.rs  variable.rs
circuits/src/tests/universal_batch_verifier/: component.rs  constants.rs  ecc.rs  mod.rs  native.rs
circuits/src/tests/utils/: field_elements_hex.rs  mod.rs
circuits/src/utils/: base64.rs  benchmarks.rs  bitmask.rs  commitment_point.rs  field_element_hex.rs  field_elements_hex.rs  file.rs  hashing.rs  keccak_hasher.rs  mod.rs  reduced.rs  upa_config.rs  vk_hex.rs
examples/confidential-coins/: .solhint.json  .solhintignore  package.json
examples/demo-app/: DEPLOYMENT.md
prover/: Cargo.toml  README.md
prover/configs/: upa_config_batch_size_2.json  upa_config_batch_size_4.json  upa_config_batch_size_8.json
prover/scripts/: aggregation_benchmark.sh  default_files.sh  dummy_srs_setup  integration_test  keygen  keygen.sh  prelude.sh  shell_setup.sh  test_prover  utils.sh
prover/src/: default_values.rs  file_utils.rs  lib.rs  main.rs  srs.rs
prover/src/full/: keygen.rs  mod.rs  prove.rs  verify.rs
prover/src/groth16/: generate_fake_vk.rs  generate_proofs.rs  mod.rs
prover/src/keccak/: keygen.rs  mod.rs  prove.rs  verify.rs
prover/src/universal_batch_verifier/: compute_circuit_id.rs  compute_proof_id.rs  compute_submission_id.rs  keygen.rs  mod.rs  prove.rs  verify.rs
prover/src/universal_outer/: keygen.rs  mod.rs  prove.rs  verifier_yul_code.rs  verify.rs
prover/tests/: upa_config_2.json  upa_config_2_with_submission_id.json  upa_config_8.json
scripts/: run_for_each
spec/circuits/: universal_batch_verifier.md  universal_outer.md  var_len_keccak.md
spec/protocol/: Makefile  README.md  upa-1.1.0.md  upa-1.2.0.md
upa/: .eslintrc.cjs  .prettierignore  .prettierrc.json  .solhint.json  .typedoc.json  DEVELOPMENT.md  README.md  hardhat.config.ts  package.json  tsconfig.json
upa/.openzeppelin/: base-sepolia.json  sepolia.json
upa/_slither/: slither.db.json
upa/contracts/: Deposits.sol  EllipticCurveUtils.sol  Groth16Verifier.sol  ICreateX.sol  IDeposits.sol  (+13 more)
verification/: .env  README.md  key_verification.sh  split_yul_code.py
(+170 files in other folders)
