[package]
name = "upa-circuits"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-std = { version = "0.3.0", default-features = false }
base64 = { version = "0.21.4" }
bincode = { version = "1.3.3", default-features = false }
env_logger = { version = "0.10", default-features = false }
ethers-core = { version = "=2.0.6", default-features = false }
halo2-base = { git = "https://github.com/axiom-crypto/halo2-lib.git", version = "0.3.0", tag = "v0.3.0-ce", package = "halo2-base", features = ["halo2-axiom"] }
halo2-ecc = { git = "https://github.com/axiom-crypto/halo2-lib.git", version = "0.3.0", tag = "v0.3.0-ce", package = "halo2-ecc", features = ["halo2-axiom"] }
hex = { version = "0.4.3" }
itertools = { version = "0.10", default-features = false }
log = { version = "0.4.20", default-features = false }
num-bigint = { version = "=0.4", features = ["rand"] }
poseidon = { git = "https://github.com/NebraZKP/halo2-lib", tag = "v0.3.0-ce-poseidon", package = "poseidon" }
poseidon_native = { git = "https://github.com/axiom-crypto/halo2.git", branch = "axiom/dev", package = "poseidon" }
rand = { version = "0.8", default-features = false }
rand_core = { version = "0.6", default-features = false, features = ["getrandom"] }
rayon = { version = "1.7", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false }
snark-verifier = { git = "https://github.com/axiom-crypto/snark-verifier", tag = "v0.1.1-ce" }
snark-verifier-sdk = { git = "https://github.com/axiom-crypto/snark-verifier", tag = "v0.1.1-ce" }
tiny-keccak = { git = "https://github.com/NebraZKP/tiny-keccak.git", branch = "no_padding_keccak", features = ["keccak"], default-features = false }
zkevm-keccak = { git = "https://github.com/NebraZKP/halo2-lib", tag = "v0.3.0-ce-keccak-2", features = ["halo2-axiom"] }

[dev-dependencies]
ark-std = { version = "0.3.0", features = ["print-trace"] }
criterion = { git = "https://github.com/NebraZKP/criterion.rs", branch = "no-min-sample-size" }
halo2-base = { git = "https://github.com/axiom-crypto/halo2-lib.git", version = "0.3.0", tag = "v0.3.0-ce", package = "halo2-base", features = ["halo2-axiom", "profile"] }

[[bench]]
name = "universal_batch_verifier"
harness = false

[[bench]]
name = "keccak"
harness = false

[[bench]]
name = "universal_outer"
harness = false
