[package]
name = "prover"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = { version = "1.3.3", default-features = false }
circuits = { path = "../circuits", package = "upa-circuits" }
clap = { version = "=4.3.21", features = ["derive"] }
env_logger = "0.10.0"
ethereum-types = { version = "=0.14.1", default-features = false, features = ["std"] }
halo2-base = { git = "https://github.com/axiom-crypto/halo2-lib.git", version = "0.3.0", tag = "v0.3.0-ce", package = "halo2-base", features = ["halo2-axiom"] }
halo2-ecc = { git = "https://github.com/axiom-crypto/halo2-lib.git", version = "0.3.0", tag = "v0.3.0-ce", package = "halo2-ecc", features = ["halo2-axiom"] }
hex = { version = "0.4.3", default-features = false }
log = { version = "0.4.20", default-features = false }
rand_chacha = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
snark-verifier = { git = "https://github.com/axiom-crypto/snark-verifier", tag = "v0.1.1-ce" }
snark-verifier-sdk = { git = "https://github.com/axiom-crypto/snark-verifier", tag = "v0.1.1-ce" }
